2008-08-17  Aurimas Juška  <aurisj@svn.gnome.org>

	* app/widgets/gimptagentry.h: described the meaning of gimp tag entry
	text mask.

2008-08-17  Aurimas Juška  <aurisj@svn.gnome.org>

	* app/widgets/gimptagentry.c (gimp_tag_entry_auto_complete):
	sort autocompletion candidates so that they can be cycled in correct
	order.

2008-08-14  Aurimas Juška  <aurisj@svn.gnome.org>

	* app/widgets/gimptagentry.c (gimp_tag_entry_select_jellybean): made
	jellybean selection with mouse work again.

2008-08-14  Aurimas Juška  <auris@auris-laptop>

	* app/core/gimptagcache.c (gimp_tag_cache_object_add): fixed
	identifier remapping when resource files are renamed.

2008-08-14  Aurimas Juška  <aurisj@svn.gnome.org>

	* app/core/gimpdata.c (gimp_data_get_identifier): fixed crash when
	creating new resource (which has NULL filename).

2008-08-12  Aurimas Juška  <aurisj@svn.gnome.org>

	* app/core/gimpfilteredcontainer.[ch]
	* app/core/gimptag.[ch]
	* app/widgets/gimptagentry.c
	* app/widgets/gimptagpopup.h: improvements and fixes for documentation
	reference comments.

2008-08-12  Aurimas Juška  <aurisj@svn.gnome.org>

	* app/widgets/gimptagentry.c (gimp_tag_entry_select_jellybean):
	some fixes of directional selections.

2008-08-12  Aurimas Juška  <aurisj@svn.gnome.org>

	* app/widgets/gimptagentry.c: reposition cursor after whitespace where
	possible. Also improved whitespace addition as user starts typing
	tags.

2008-08-11  Aurimas Juška  <aurisj@svn.gnome.org>

	* app/core/gimptag.c: fixed case insensitive tag handling.

2008-08-10  Aurimas Juška  <aurisj@svn.gnome.org>

	* app/widgets/gimptagpopup.c (gimp_tag_popup_border_event): disable
	single selection mode when mouse button is release outside popup
	window.

2008-08-10  Aurimas Juška  <aurisj@svn.gnome.org>

	* app/widgets/gimptagentry.c
	(gimp_tag_entry_strip_extra_whitespace): reposition cursor after a
	whitespace when there are no tags before (last position).

2008-08-10  Aurimas Juška  <aurisj@svn.gnome.org>
